# tmt-hackathon

./: .env_example  Cargo.toml  Cross.toml  README.md
.github/workflows/: release.yml
docs/: 404.html  CNAME  glossary.html  index.html  print.html  searcher-c2a407aa.js  searchindex-e8764755.js  toc-4faba5cc.js  toc.html
docs/architecture/: entry-point.html  error-handling.html  index.html
docs/format-handlers/: csv-tsv.html  docx.html  index.html  pdf.html
docs/getting-started/: cli-reference.html  configuration.html  index.html  prerequisites.html
docs/testing/: index.html
docs/translation-service/: index.html  rate-limiting.html  sentence-splitting.html  tmt-api-client.html
sample-data/: input.csv  sample-docs.docx
src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
src/formats/: csv_tsv.rs  docx.rs  mod.rs
src/formats/pdf/: bundled_fonts.rs  error.rs  fonts.rs  mod.rs  parser.rs  reconstructor.rs  renderer.rs  translator.rs  types.rs  utils.rs
src/tmt/: backoff.rs  client.rs  mod.rs
src/translate/: mod.rs  sentence.rs  service.rs
tests/: config_validation.rs  parse_retry_after.rs  sentence_split.rs
