[package]
name = "hackathon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
once_cell = "1.19"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
httpdate = { version = "1.0", optional = true }

# PDF pipeline (optional; enable with --features pdf)
pdfium-render = { version = "0.8", optional = true }
lopdf = { version = "0.32", optional = true }
rustybuzz = { version = "0.13", optional = true }
freetype = { version = "0.7", optional = true }
image = { version = "0.25", optional = true }
anyhow = { version = "1", optional = true }
futures = "0.3.32"

[features]
httpdate = ["dep:httpdate"]
pdf = [
  "dep:pdfium-render",
  "dep:lopdf",
  "dep:rustybuzz",
  "dep:freetype",
  "dep:image",
  "dep:anyhow",
]
